RESOLVED FIXED55602
REGRESSION (r79817): Lots of leaks of FloatingObjects seen on SnowLeopard Intel Leaks bot
https://bugs.webkit.org/show_bug.cgi?id=55602
Summary REGRESSION (r79817): Lots of leaks of FloatingObjects seen on SnowLeopard Int...
Adam Roben (:aroben)
Reported 2011-03-02 12:34:31 PST
The SnowLeopard Intel Leaks bot is showing lots of leaks of FloatingObjects. See the URL for an example. Maybe this is related to the recent work done in this area in r79817 and r79834?
Attachments
Patch (1.68 KB, patch)
2011-03-02 13:52 PST, Benjamin Poulain
no flags
Adam Roben (:aroben)
Comment 1 2011-03-02 12:35:00 PST
Benjamin Poulain
Comment 4 2011-03-02 12:41:08 PST
It is probably my fault. I have probably forgot at delete when the object are removed from the list. You can assign to me, I can have a look on Saturday.
Benjamin Poulain
Comment 5 2011-03-02 13:52:37 PST
Benjamin Poulain
Comment 6 2011-03-02 13:56:27 PST
I went over all the call removing objects of m_floatingObjects and found an instance were I forgot to call deleteAllValues(). I created https://bugs.webkit.org/show_bug.cgi?id=55611 to look for a better way to handle memory so we have a long term solution.
WebKit Commit Bot
Comment 7 2011-03-03 02:44:55 PST
Comment on attachment 84459 [details] Patch Clearing flags on attachment: 84459 Committed r80221: <http://trac.webkit.org/changeset/80221>
WebKit Commit Bot
Comment 8 2011-03-03 02:45:00 PST
All reviewed patches have been landed. Closing bug.
Adam Roben (:aroben)
Comment 9 2011-03-03 05:46:09 PST
Note You need to log in before you can comment on or make changes to this bug.