2011-03-03  Benjamin Poulain  <ikipou@gmail.com>

Reviewed by Adam Roben.

        REGRESSION (r79817): Lots of leaks of FloatingObjects seen on SnowLeopard Intel Leaks bot
        https://bugs.webkit.org/show_bug.cgi?id=55602

        Delete the FloatingObject referenced by m_floatingObjects when clearing the floats.

        The DeprecatedPtrList was deleting the objects automatically due to its autoDelete behavior. The
        objects need to be deleted manually with ListHashSet.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::clearFloats):

Canonical link: https://commits.webkit.org/70116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80221 268f45cc-cd09-0410-ab3c-d52691b4dbfc